<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/ResInicio" />
        <item
            android:id="@+id/nav_descubre"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/ResDescubre" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ResCalendario" />
        <item
            android:id="@+id/nav_actividad"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ResActividad" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ResAjustes" />
    </group>

</menu>
