<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page_sing_in_up"
    android:background="#ffffff">

    <ImageView
        android:layout_width="193dp"
        android:layout_height="193dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal|top"
        android:src="@mipmap/icon_app"
        android:layout_above="@+id/txt_user_description"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ResSingIn"
        android:gravity="center"
        android:id="@+id/btn_sing_in"
        android:textSize="45dp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_above="@+id/btn_sing_up"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ResSingUp"
        android:gravity="center"
        android:id="@+id/btn_sing_up"
        android:textSize="45dp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name"
        android:gravity="center"
        android:id="@+id/txt_user_description"
        android:textStyle="bold"
        android:textSize="50dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btn_sing_in" />

</RelativeLayout>
