<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="giam.myapplication.LoginActivity"
    android:background="@android:color/white"
    android:padding="30dp">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/img_back_sing_in">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResSingInTitle"
        android:id="@+id/email_sign_in_button"
        android:background="@drawable/buttom_login"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Do not remember my password"
        android:id="@+id/sss"
        android:textColor="@android:color/holo_blue_bright"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/email_sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="134dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/img_back_sing_in"
        android:layout_marginTop="70dp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:id="@+id/img_back_sing_in"
        android:src="@mipmap/icon_arrow_left"
        android:padding="20dp"
        android:layout_marginLeft="-20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/ResSingInTitle"
        android:textSize="40dp"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/txt_login_title"
        android:textStyle="bold"
        android:layout_alignTop="@+id/img_back_sing_in"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
